--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "less": "^4.2.0",
     "less-loader": "^12.1.0",
     "localforage": "^1.10.0",
+    "uuid": "^9.0.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.8",
     "@types/node": "^20.11.10",
+    "@types/uuid": "^9.0.8",
     "@vitejs/plugin-vue": "^4.2.3",
     "typescript": "^5.0.2",
     "unplugin-vue-components": "^0.26.0",
