--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "less": "^4.2.0",
     "less-loader": "^12.1.0",
     "localforage": "^1.10.0",
+    "pinia": "^2.1.7",
     "uuid": "^9.0.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
