--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,6 +22,7 @@ sqlx = {version = "0.7", default_features = false, features = [
     "macros",
     "chrono",
 ] }
+chrono = "0.4"
 tokio = { version = "1", features = ["full"] }
 
 
