--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,6 +24,7 @@ sqlx = {version = "0.7", default_features = false, features = [
 ] }
 chrono = "0.4"
 tokio = { version = "1", features = ["full"] }
+docx-rs = "0.4"
 
 
 [features]
