--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,6 +25,7 @@ sqlx = {version = "0.7", default_features = false, features = [
 chrono = "0.4"
 tokio = { version = "1", features = ["full"] }
 docx-rs = "0.4"
+rfd = "0.4"
 
 
 [features]
