--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "swe",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.1.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -22,10 +22,11 @@
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.5.8",
+    "@tauri-apps/cli": "^1.5.11",
     "@types/node": "^20.11.10",
     "@types/uuid": "^9.0.8",
     "@vitejs/plugin-vue": "^4.2.3",
+    "node-fetch": "^3.3.2",
     "typescript": "^5.0.2",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.0",
